--- a/contactus.html
+++ b/contactus.html
@@ -472,6 +472,7 @@
                                    <a href="#"><i class="fab fa-github"></i></a>
                                    <a href="#"><i class="fab fa-telegram"></i></a>
                                    <a href="#"><i class="fab fa-whatsapp"></i></a>
+                                   <a href="#"><i class="fab fa-tiktok"></i></a>
                                </div>
                            </div>
                        </div>
