--- a/contactus.html
+++ b/contactus.html
@@ -375,7 +375,7 @@
                 </script>
                 
             
-            <div class="row table-success ">
+            <div class="row table-dark ">
                 <div class="col-12">
                     <h2 class="contact-title"> Message:</h2>
                 </div>
