--- a/contactus.html
+++ b/contactus.html
@@ -29,6 +29,11 @@
             color: rgb(14, 13, 13);
             font-weight: bold;
         }
+        .ibrahim{
+             /* text-align: center;
+             text-transform: uppercase; */
+            color:white;
+        }
     </style>
 </head>
 
@@ -411,28 +416,28 @@
                 <div class="col-lg-3 offset-lg-1">
                     <div class="media contact-info">
                         <span class="contact-info__icon"><i class="ti-home"></i></span>
-                        <div class="media-body">
+                        <div class="media-body ibrahim">
                             <h3> LOCATION ADDRESS:</h3>
                             <h3>Somalia,Hargeisa,Xawaadle</h3>
                         </div>
                     </div>
                     <div class="media contact-info">
                         <span class="contact-info__icon"><i class="ti-email"></i></span>
-                        <div class="media-body">
+                        <div class="media-body ibrahim">
                             <h3> EMAIL ADDRESS:</h3>
                             <h3>contacts@maandeeq.com</h3>
                         </div>
                     </div>
                     <div class="media contact-info">
                         <span class="contact-info__icon"><i class="ti-mobile"></i></span>
-                        <div class="media-body">
+                        <div class="media-body ibrahim">
                             <h3>MOBILE E-DAHAB:</h3>
                             <h3>+252 65 6356654</h3>
                         </div>
                     </div>
                     <div class="media contact-info">
                         <span class="contact-info__icon"><i class="ti-mobile"></i></span>
-                        <div class="media-body">
+                        <div class="media-body ibrahim">
                             <h3>MOBILE ZAAD:</h3>
                             <h3>+252 63 6356654</h3>
                         </div>
