--- a/contactus.html
+++ b/contactus.html
@@ -424,22 +424,22 @@
                     <div class="media contact-info">
                         <span class="contact-info__icon"><i class="ti-email"></i></span>
                         <div class="media-body ibrahim">
-                            <h3> EMAIL ADDRESS:</h3>
-                            <h3>contacts@maandeeq.com</h3>
+                            <p> EMAIL ADDRESS:</p>
+                            <p>contacts@maandeeq.com</p>
                         </div>
                     </div>
                     <div class="media contact-info">
                         <span class="contact-info__icon"><i class="ti-mobile"></i></span>
                         <div class="media-body ibrahim">
-                            <h3>MOBILE E-DAHAB:</h3>
-                            <h3>+252 65 6356654</h3>
+                            <p>MOBILE E-DAHAB:</p>
+                            <p>+252 65 6356654</p>
                         </div>
                     </div>
                     <div class="media contact-info">
                         <span class="contact-info__icon"><i class="ti-mobile"></i></span>
                         <div class="media-body ibrahim">
-                            <h3>MOBILE ZAAD:</h3>
-                            <h3>+252 63 6356654</h3>
+                            <p>MOBILE ZAAD:</p>
+                            <p>+252 63 6356654</p>
                         </div>
                     </div>
                    
