--- a/institutes_supervisors.html
+++ b/institutes_supervisors.html
@@ -122,7 +122,7 @@
         </div>
         <!-- Header End -->
     </header>
-   <main class="table-success">
+   <main class="table-dark">
         <!--? slider Area Start-->
         <section class="slider-area ">
             <div class="slider-active">
