--- a/contactus.html
+++ b/contactus.html
@@ -389,27 +389,27 @@
                         <div class="row">
                             <div class="col-12">
                                 <div class="form-group">
-                                    <textarea style="border: 2px solid red" class="form-control w-100 " name="message" id="message" cols="30" rows="9" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Message'" placeholder=" Enter Message"></textarea>
+                                    <textarea style="border: 2px solid red" class="form-control w-100 " name="message" id="message" cols="30" rows="9" onfocus="this.placeholder = ''" onblur="this.placeholder = 'MESSAGE'" placeholder=" Enter Message"></textarea>
                                 </div>
                             </div>
                             <div class="col-sm-6">
                                 <div class="form-group">
-                                    <input style="border: 2px solid red" class="form-control valid" name="name" id="name" type="text" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter your name'" placeholder="Enter your name">
+                                    <input style="border: 2px solid red" class="form-control valid" name="name" id="name" type="text" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter your name'" placeholder="NAME">
                                 </div>
                             </div>
                             <div class="col-sm-6">
                                 <div class="form-group">
-                                    <input style="border: 2px solid red" class="form-control valid" name="email" id="email" type="email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter email address'" placeholder="Email">
+                                    <input style="border: 2px solid red" class="form-control valid" name="email" id="email" type="email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter email address'" placeholder="EMAIL">
                                 </div>
                             </div>
                             <div class="col-12">
                                 <div class="form-group">
-                                    <input style="border: 2px solid red" class="form-control" name="subject" id="subject" type="text" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Subject'" placeholder="Enter Subject">
+                                    <input style="border: 2px solid red" class="form-control" name="subject" id="subject" type="text" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Subject'" placeholder="SUBJECT">
                                 </div>
                             </div>
                         </div>
                         <div class="form-group mt-3">
-                            <button type="submit" style="border: 2px solid red" class="button button-contactForm boxed-btn">Send</button>
+                            <button type="submit" style="border: 2px solid red" class="button button-contactForm boxed-btn">SEND MESSAGE</button>
                         </div>
                     </form>
                 </div>
