--- a/arabic_systems.html
+++ b/arabic_systems.html
@@ -335,7 +335,7 @@
             <div class="container">
                 <div style="overflow-x:auto;">
                      <table id="example" class="display table-dark " style="width:100%">
-                        <thead class="table-primary">
+                        <thead class="table-dark">
                             <tr>
                                 <th>INSTITUTION</th>
                                 <th>REGION</th>
