--- a/archives.html
+++ b/archives.html
@@ -357,7 +357,7 @@
                                         <h3 class="pricing-price"><sup>$</sup>200<sub>/mo*</sub></h3>
                                     </div> --> 
                                 </div>
-                                <a href="#" class="border-btn border-btn2">ARCHIVES</a> 
+                                <a href="#" class="genric-btn primary circle">ARCHIVES</a> 
                             </div>
 
                         </div>
