--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                 <div class="right-content3">
                     <!-- img -->
                     <div class="right-img">
-                        <img src="assets/img/maandeeq.png" alt="">
+                        <img src="assets/img/maandeeq.png" alt="" width="500" height="600">
                     </div>
                 </div>
                 <div class="left-content3">
