--- a/index.html
+++ b/index.html
@@ -324,8 +324,8 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                            <h2>EXAMINATIONAL</h2>
-                            <h2>SERVICES</h2>
+                            <h2>MAANDEEQ</h2>
+                            <h2>VISION</h2>
                         </div>
                     </div>
                 </div>
