--- a/index.html
+++ b/index.html
@@ -885,7 +885,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                               <h2>MAANDEEQ</h2>
-                               <h2>VISION</h2>
+                               <h2>CORE VALUES</h2>
                         </div>
                     </div>
                 </div>
