--- a/index.html
+++ b/index.html
@@ -897,7 +897,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                <p>ACADEMIC</p>
+                                <p>SMART</p>
                                 <h3>SCHOOLS</h3>
                                 <p style="text-align: justify;">
                                     Online systems are the best tool to manage educational institutions efficiently and effectively.
@@ -929,7 +929,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                    <p>ACADEMIC</p>
+                                    <p>SMART</p>
                                     <h3>INSTITUTES</h3>
                                     <p style="text-align: justify;">
                                         Online systems are the best tool to manage educational institutions efficiently and effectively.
@@ -963,7 +963,7 @@
                                 </div>
                                 <div class="properties__caption">
                                 <p>ACADEMIC</p>
-                                <h3>UNIVERSITIES</h3>
+                                <h3>SMART</h3>
                                 <p style="text-align: justify;">
                                     Online systems are the best tool to manage educational institutions efficiently and effectively.
                                 </p>
