--- a/arabic_products.html
+++ b/arabic_products.html
@@ -155,7 +155,7 @@
                             <div class="features-caption" style="text-align: justify;">
                                 <h3>KGSS</h3>
                                 <p>
-                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                             </div>
                         </div>
@@ -168,7 +168,7 @@
                             <div class="features-caption" style="text-align: justify;">
                                 <h3>PRISS</h3>
                                 <p>
-                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                             </div>
                         </div>
@@ -181,7 +181,7 @@
                             <div class="features-caption" style="text-align: justify;">
                                 <h3>PRESS</h3>
                                 <p>
-                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                             </div>
                         </div>
@@ -198,7 +198,7 @@
                             <div class="features-caption" style="text-align: justify;">
                                 <h3>SECSS</h3>
                                 <p>
-                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                             </div>
                         </div>
@@ -211,7 +211,7 @@
                             <div class="features-caption" style="text-align: justify;">
                                 <h3>KGPRISS</h3>
                                 <p>
-                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                             </div>
                         </div>
@@ -224,7 +224,7 @@
                             <div class="features-caption" style="text-align: justify;">
                                 <h3>PRIPRESS</h3>
                                 <p>
-                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                             </div>
                         </div>
@@ -237,7 +237,7 @@
                             <div class="features-caption" style="text-align: justify;">
                                 <h3>PRESECSS</h3>
                                 <p>
-                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                             </div>
                         </div>
@@ -250,7 +250,7 @@
                             <div class="features-caption" style="text-align: justify;">
                                 <h3>KGPRIPRESS</h3>
                                 <p>
-                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                             </div>
                         </div>
@@ -263,7 +263,7 @@
                             <div class="features-caption" style="text-align: justify;">
                                 <h3>PRIPRESECSS</h3>
                                 <p>
-                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                             </div>
                         </div>
@@ -280,7 +280,7 @@
                             <div class="features-caption" style="text-align: justify;">
                                 <h3>KGPRIPRESECSS</h3>
                                 <p>
-                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                             </div>
                         </div>
@@ -293,7 +293,7 @@
                             <div class="features-caption" style="text-align: justify;">
                                 <h3>AIS</h3>
                                 <p>
-                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                             </div>
                         </div>
@@ -306,7 +306,7 @@
                             <div class="features-caption" style="text-align: justify;">
                                 <h3>AUS</h3>
                                 <p>
-                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                             </div>
                         </div>
@@ -340,7 +340,7 @@
                                 <p>SCHOOLS VERSIONS</p>
                                 <h3>KGSS</h3>
                                  <p style="text-align: justify;">
-                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                     <div class="properties__footer d-flex justify-content-between align-items-center">
                                         <div class="restaurant-name">
@@ -372,7 +372,7 @@
                                     <p>SCHOOLS VERSIONS</p>
                                     <h3>PRISS</h3>
                                     <p style="text-align: justify;">
-                                        Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                        ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                     </p>
                                     <div class="properties__footer d-flex justify-content-between align-items-center">
                                         <div class="restaurant-name">
@@ -405,7 +405,7 @@
                                     <p>SCHOOLS VERSIONS</p>
                                 <h3>PRESS</h3>
                                  <p style="text-align: justify;">
-                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                     <div class="properties__footer d-flex justify-content-between align-items-center">
                                         <div class="restaurant-name">
@@ -438,7 +438,7 @@
                                     <p>SCHOOLS VERSIONS</p>
                                     <h3>SECSS</h3>
                                     <p style="text-align: justify;">
-                                        Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                        ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                     </p>
                                     <div class="properties__footer d-flex justify-content-between align-items-center">
                                         <div class="restaurant-name">
@@ -471,7 +471,7 @@
                                     <p>SCHOOLS VERSIONS</p>
                                 <h3>KGPRISS</h3>
                                  <p style="text-align: justify;">
-                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                     <div class="properties__footer d-flex justify-content-between align-items-center">
                                         <div class="restaurant-name">
@@ -504,7 +504,7 @@
                                     <p>SCHOOLS VERSIONS</p>
                                     <h3>PRIPRESS</h3>
                                     <p style="text-align: justify;">
-                                        Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                        ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                     </p>
                                     <div class="properties__footer d-flex justify-content-between align-items-center">
                                         <div class="restaurant-name">
@@ -536,7 +536,7 @@
                                     <p>SCHOOLS VERSIONS</p>
                                 <h3>PRESECSS</h3>
                                  <p style="text-align: justify;">
-                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                     <div class="properties__footer d-flex justify-content-between align-items-center">
                                         <div class="restaurant-name">
@@ -568,7 +568,7 @@
                                     <p>SCHOOLS VERSIONS</p>
                                 <h3>KGPRIPRESS</h3>
                                  <p style="text-align: justify;">
-                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                     <div class="properties__footer d-flex justify-content-between align-items-center">
                                         <div class="restaurant-name">
@@ -601,7 +601,7 @@
                                     <p>SCHOOLS VERSIONS</p>
                                 <h3>PRIPRESECSS</h3>
                                  <p style="text-align: justify;">
-                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                     <div class="properties__footer d-flex justify-content-between align-items-center">
                                         <div class="restaurant-name">
@@ -634,7 +634,7 @@
                                     <p>SCHOOLS VERSIONS</p>
                                 <h3>KGPRIPRESECSS</h3>
                                  <p style="text-align: justify;">
-                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                     <div class="properties__footer d-flex justify-content-between align-items-center">
                                         <div class="restaurant-name">
@@ -667,7 +667,7 @@
                                     <p>INSTITUTES VERSIONS</p>
                                 <h3>AIS</h3>
                                  <p style="text-align: justify;">
-                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                     <div class="properties__footer d-flex justify-content-between align-items-center">
                                         <div class="restaurant-name">
@@ -700,7 +700,7 @@
                                     <p>UNIVERSITIES VERSIONS</p>
                                 <h3>AUS</h3>
                                  <p style="text-align: justify;">
-                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                     <div class="properties__footer d-flex justify-content-between align-items-center">
                                         <div class="restaurant-name">
