--- a/index.html
+++ b/index.html
@@ -3452,6 +3452,7 @@
                                <div class="footer-tittle">
                                    <h4>SCHOOLS</h4>
                                    <ul> 
+                                       <li><a href="schools.platforms.html">SCHOOLS</a></li>
                                        <li><a href="schools.examinations.html">EXAMINATIONS</a></li>
                                        <li><a href="schools.systems.html">SYSTEMS</a></li>
                                        <li><a href="schools_services.html">SERVICES</a></li>
@@ -3469,6 +3470,7 @@
                                <div class="footer-tittle">
                                    <h4>INSTITUTES</h4>
                                    <ul> 
+                                       <li><a href="institutes.platforms.html">INSTITUTES</a></li>
                                        <li><a href="institutes.examinations.html">EXAMINATIONS</a></li>
                                        <li><a href="institutes.systems.html">SYSTEMS</a></li>
                                        <li><a href="institutes_services.html">SERVICES</a></li>
@@ -3486,6 +3488,7 @@
                                <div class="footer-tittle">
                                    <h4>UNIVERSITIES</h4>
                                    <ul> 
+                                       <li><a href="universities.platforms.html">UNIVERSITIES</a></li>
                                        <li><a href="universities.examinations.html">EXAMINATIONS</a></li>
                                        <li><a href="universities.systems.html">SYSTEMS</a></li>
                                        <li><a href="universities_services.html">SERVICES</a></li>
